--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mydevportfolio",
-  "homepage": "https://pawanmalkani.github.io/mydevfolio",
+  "homepage": "https://pawanmalkani.github.io/mydevfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
